winscore input, random bg

--- a/4-DOM-Pig-Game/index.html
+++ b/4-DOM-Pig-Game/index.html
@@ -9,7 +9,7 @@
         <title>Pig Game</title>
     </head>
 
-    <body>
+    <body class="random-bg">
         <div class="wrapper clearfix">
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
@@ -29,6 +29,7 @@
                 </div>
             </div>
             
+            <button class="input-to-win"><input type="number" value="100" id="win-score">to win</button>
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
